fixed tooltips, integrated censoreship features

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
         <div class="box-flex-element b2"> <!-- CHANGE IT TO b3 LATER! -->
           <h1 class="bfe-title">About me</h1>
           <p class="about-me-text">
-            Hey there, welcome! My real name is Wiktor, but I go by Kwadratz online. I live in Wrocław, Poland, and I speak, well, 
-            Polish and English (I also learn Korean). Living in the <b>CEST timezone.</b> I am passionate about programming, as you can see, and I specialize in Python, 
-            however, I have some plans on getting to know Unity with C# and Java. Privately, I love rollerskating, playing chess and
-            listening to K-pop (of course besides coding :D). I also have a furious cat named Hubert.
+            Hey there, welcome! My real name is Wiktor, but I go by Kwadratz online. Living in <strong>Wrocław, Poland</strong>, which is in the 
+            <strong>CEST timezone</strong>. I speak, well, Polish and English (I started learning Korean too!). I am passionate about
+            programming, as you can see, and I specialize in Python, however, I have some future plans aligned with other stuff, such as 
+            fullstack web development. Privately, I LOVE rollerskating, reading, playing chess, listening to music, especially tracks from 
+            <span class="tooltip tooltip-dotted"><i>these artists.</i><span class="tooltiptext">Arctic Monkeys, Lana Del Rey, beabadoobee and 
+            Gorillaz.</span></span> Check 'em out!
           </p>
           <div class="box-flex-element-of-element beb-shorter">
             <button class="box-element-btn beb-shorter" onclick="window.location.href = 'pcspecs.html'">
@@ -98,7 +100,7 @@
                 my website! I made a pretty overhaul of it, adding some new elements and deleting some, making it almost PERFECT! Image support on the blog
                 page (which is located exclusively on the index!), new cool boxes with fun stuff, a nice image layout, buttons, and MUCH more! I have updated
                 the "about me" section and also the contact page, make some time to visit them if you want. <br>
-                TL;DR: I am now a BIG k-pop fan (< 3 BLACKPINK and NewJeans), I started playing chess, and I did lots of private and personal changes to
+                TL;DR: I am now a k-pop fan (< 3 BLACKPINK and NewJeans), I started playing chess, and I did lots of private and personal changes to
                 myself.<br>
                 About my programming "career" - I wanted to make a Minecraft-styled clone (see post below!), but it hadn't really got into the serious stage
                 of development, but I didn't give up though - I made another early prototype like that, which sneak peek you can get from the attached
